--- a/app/src/main/res/layout/activity_city_sunsire.xml
+++ b/app/src/main/res/layout/activity_city_sunsire.xml
@@ -4,36 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".zooApp.DetailAnimalActivity">
+    tools:context=".citySunsire.CitySunsireActivity">
 
-    <ImageView
-        android:id="@+id/image_animal"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/bulbasaur"
+    <EditText
+        android:id="@+id/edt_entercode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="40dp"
+        android:hint="nhapcode++4a1b"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_showfoodName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="hung"
-        android:textSize="30dp"
+        android:layout_marginTop="30dp"
+        android:text="show"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_animal" />
-    <TextView
-        android:id="@+id/tv_desc"
+        app:layout_constraintTop_toBottomOf="@+id/edt_entercode" />
+
+    <Button
+        android:id="@+id/btn_get"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="deteai"
-        android:textSize="24dp"
+        android:text="get"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
