--- a/app/src/main/res/drawable/background_killer.xml
+++ b/app/src/main/res/drawable/background_killer.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape>
+            <stroke android:color="@color/purple_200"
+                android:width="2dp"/>
+            <solid android:color="@color/white"/>
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
 </selector>
